[package]
name = "ecology"
version = "0.1.0"
authors = ["lyndon <lyndondmackay@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
criterion = "0.3.1"
rayon = "1.3.0"
threadpool = "1.8.0"
clap = "2.33.0"


[[bench]]
name = "main_benchmark"
harness = false

[profile.release]
debug = true
